; ModuleID = '/home/carl/AnghaBench/jq/src/extr_jv_parse.c_tokenadd.c'
source_filename = "/home/carl/AnghaBench/jq/src/extr_jv_parse.c_tokenadd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.jv_parser = type { i32, i32, i8* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.jv_parser*, i8)* @tokenadd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tokenadd(%struct.jv_parser* %0, i8 signext %1) #0 {
  %3 = alloca %struct.jv_parser*, align 8
  %4 = alloca i8, align 1
  store %struct.jv_parser* %0, %struct.jv_parser** %3, align 8
  store i8 %1, i8* %4, align 1
  %5 = load %struct.jv_parser*, %struct.jv_parser** %3, align 8
  %6 = getelementptr inbounds %struct.jv_parser, %struct.jv_parser* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 8
  %8 = load %struct.jv_parser*, %struct.jv_parser** %3, align 8
  %9 = getelementptr inbounds %struct.jv_parser, %struct.jv_parser* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = icmp sle i32 %7, %10
  %12 = zext i1 %11 to i32
  %13 = call i32 @assert(i32 %12)
  %14 = load %struct.jv_parser*, %struct.jv_parser** %3, align 8
  %15 = getelementptr inbounds %struct.jv_parser, %struct.jv_parser* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 8
  %17 = load %struct.jv_parser*, %struct.jv_parser** %3, align 8
  %18 = getelementptr inbounds %struct.jv_parser, %struct.jv_parser* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = sub nsw i32 %19, 1
  %21 = icmp sge i32 %16, %20
  br i1 %21, label %22, label %39

22:                                               ; preds = %2
  %23 = load %struct.jv_parser*, %struct.jv_parser** %3, align 8
  %24 = getelementptr inbounds %struct.jv_parser, %struct.jv_parser* %23, i32 0, i32 1
  %25 = load i32, i32* %24, align 4
  %26 = mul nsw i32 %25, 2
  %27 = add nsw i32 %26, 256
  %28 = load %struct.jv_parser*, %struct.jv_parser** %3, align 8
  %29 = getelementptr inbounds %struct.jv_parser, %struct.jv_parser* %28, i32 0, i32 1
  store i32 %27, i32* %29, align 4
  %30 = load %struct.jv_parser*, %struct.jv_parser** %3, align 8
  %31 = getelementptr inbounds %struct.jv_parser, %struct.jv_parser* %30, i32 0, i32 2
  %32 = load i8*, i8** %31, align 8
  %33 = load %struct.jv_parser*, %struct.jv_parser** %3, align 8
  %34 = getelementptr inbounds %struct.jv_parser, %struct.jv_parser* %33, i32 0, i32 1
  %35 = load i32, i32* %34, align 4
  %36 = call i8* @jv_mem_realloc(i8* %32, i32 %35)
  %37 = load %struct.jv_parser*, %struct.jv_parser** %3, align 8
  %38 = getelementptr inbounds %struct.jv_parser, %struct.jv_parser* %37, i32 0, i32 2
  store i8* %36, i8** %38, align 8
  br label %39

39:                                               ; preds = %22, %2
  %40 = load %struct.jv_parser*, %struct.jv_parser** %3, align 8
  %41 = getelementptr inbounds %struct.jv_parser, %struct.jv_parser* %40, i32 0, i32 0
  %42 = load i32, i32* %41, align 8
  %43 = load %struct.jv_parser*, %struct.jv_parser** %3, align 8
  %44 = getelementptr inbounds %struct.jv_parser, %struct.jv_parser* %43, i32 0, i32 1
  %45 = load i32, i32* %44, align 4
  %46 = icmp slt i32 %42, %45
  %47 = zext i1 %46 to i32
  %48 = call i32 @assert(i32 %47)
  %49 = load i8, i8* %4, align 1
  %50 = load %struct.jv_parser*, %struct.jv_parser** %3, align 8
  %51 = getelementptr inbounds %struct.jv_parser, %struct.jv_parser* %50, i32 0, i32 2
  %52 = load i8*, i8** %51, align 8
  %53 = load %struct.jv_parser*, %struct.jv_parser** %3, align 8
  %54 = getelementptr inbounds %struct.jv_parser, %struct.jv_parser* %53, i32 0, i32 0
  %55 = load i32, i32* %54, align 8
  %56 = add nsw i32 %55, 1
  store i32 %56, i32* %54, align 8
  %57 = sext i32 %55 to i64
  %58 = getelementptr inbounds i8, i8* %52, i64 %57
  store i8 %49, i8* %58, align 1
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i8* @jv_mem_realloc(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
